# newsletter-app

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  wsgi.py
src/: scheduler.py
src/news_aggregator/: app.py  config.py  email_template.py  graph.py  scheduler.py  utils.py
src/news_aggregator/static/css/: main.css
src/news_aggregator/static/js/: app.js
src/news_aggregator/templates/: 404.html  500.html  base.html  index.html  modify_config.html  settings.html  setup.html
