[project]
name = "newsletter-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Anass El Achham",email = "anas.elachham@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=0.3.21,<0.4.0)",
    "tavily-python (>=0.5.3,<0.6.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "wtforms (>=3.2.1,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "pytz (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
